<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    tools:context=".ui.detail.DetailActivity">

    <ImageView
        android:layout_width="170dp"
        android:layout_height="250dp"
        android:id="@+id/iv_poster"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/poster" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tv_title"
        android:layout_marginStart="16dp"
        android:textStyle="bold"
        android:maxLines="2"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_poster"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/genre"
        android:id="@+id/category"
        android:textSize="12sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        app:layout_constraintEnd_toEndOf="@id/tv_title" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tv_category"
        app:layout_constraintTop_toBottomOf="@id/category"
        app:layout_constraintStart_toStartOf="@id/category"
        app:layout_constraintEnd_toEndOf="@id/category"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/duration"
        android:text="@string/duration"
        android:layout_marginTop="8dp"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/tv_category"
        app:layout_constraintStart_toStartOf="@id/tv_category"
        app:layout_constraintEnd_toEndOf="@id/tv_category" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tv_duration"
        app:layout_constraintStart_toStartOf="@id/duration"
        app:layout_constraintTop_toBottomOf="@id/duration"
        app:layout_constraintEnd_toEndOf="@id/duration"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/release"
        android:layout_marginTop="8dp"
        android:text="@string/release"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/tv_duration"
        app:layout_constraintStart_toStartOf="@id/tv_duration"
        app:layout_constraintEnd_toEndOf="@id/tv_duration" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tv_release"
        app:layout_constraintStart_toStartOf="@id/release"
        app:layout_constraintTop_toBottomOf="@id/release"
        app:layout_constraintEnd_toEndOf="@id/release"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/director"
        android:layout_marginTop="8dp"
        android:text="@string/director"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/tv_release"
        app:layout_constraintStart_toStartOf="@id/tv_release"
        app:layout_constraintEnd_toEndOf="@id/tv_release" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tv_director"
        app:layout_constraintStart_toStartOf="@id/director"
        app:layout_constraintEnd_toEndOf="@id/director"
        app:layout_constraintTop_toBottomOf="@id/director" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/overview"
        android:id="@+id/overview"
        android:textSize="18sp"
        android:layout_marginTop="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_poster" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/tv_description"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/overview"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progress_bar"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>